--- a/medium.html
+++ b/medium.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Author" content="Zakaria_Motaoikil">
+    <meta name="KeyWords" content="merleft,MERLEFT,Zakaria_Motaoikil,agadir,Agadir,Ifni,ifni">
     <title>Mirleft</title>
 
     <link rel="stylesheet" href="css.css" type="text/css">
