--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Zakaria_Motaoikil">
     <meta name="KeyWords" content="mirleft,MIRLEFT,Zakaria_Motaoikil,agadir,Agadir,Ifni,ifni">
+    <meta name="google-site-verification" content="VgawfWad5Q5X5hmiuTyF9YqvGWxnecThm8JK4_3vnzw" />
     <title>Mirleft</title>
 
     <link rel="stylesheet" href="css.css" type="text/css">
